[gd_scene load_steps=6 format=3 uid="uid://blp4xut46te8p"]

[ext_resource type="Script" uid="uid://bjs0ev6hpqp08" path="res://scripts/MenuScripts/MainMenu.gd" id="1_c22g7"]
[ext_resource type="Texture2D" uid="uid://c1sjj3ec6xnf" path="res://assets/temp/Start5.png" id="2_cun8g"]
[ext_resource type="Texture2D" uid="uid://d2xpmisa3such" path="res://assets/temp/Settings5.png" id="3_bex41"]
[ext_resource type="Texture2D" uid="uid://d124oom14atjk" path="res://assets/temp/Quit5.png" id="4_hag0s"]

[sub_resource type="Theme" id="Theme_c22g7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c22g7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 644.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Roulette Week 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_c22g7")
icon = ExtResource("2_cun8g")
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("3_bex41")
icon_alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("4_hag0s")
icon_alignment = 1
